# Holix

./: .dockerignore  .env.example  .gitignore  .helix_complete  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  cli.py  config.py  docker-compose.yml  instruction.md  langgraph.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/codeql/: codeql-config.yml  path-sanitizer.model.yml
.github/workflows/: ci.yml  codeql-analysis.yml  github-release.yml  publish-pypi.yml
api/: deps.py  docs_chat.py  errors.py  gateway.py  models.py  prometheus.py  state.py
api/routers/: __init__.py  admin.py  health.py  helix_config.py  helix_global.py  helix_mcp.py  helix_models.py  helix_profiles.py  helix_skills.py  helix_telegram.py  hermes_jobs.py  hermes_sessions.py  hermes_v1.py  holix_config.py  holix_global.py  holix_launch.py  holix_max.py  holix_mcp.py  holix_models.py  holix_profiles.py  holix_skills.py  holix_telegram.py  legacy_v1.py  link.py
api/schemas/: hermes.py  holix.py
api/services/: config_mask.py  content_parts.py  env_mask.py  env_store.py  hermes_sse.py  holix_deps.py  job_body.py  max_ops.py  model_catalog.py  path_visibility.py  profile_access.py  telegram_ops.py
cli/: __init__.py  __main__.py  core.py  main.py
cli/commands/: bootstrap.py  chat.py  config.py  cron.py  docs.py  doctor.py  gateway.py  gateway_configure.py  hub.py  install_cmd.py  launch.py  logs.py  max.py  max_admin.py  max_map.py  max_requests.py  max_setup.py  max_users.py  mcp.py  memory.py  models.py  profile.py  run.py  search.py  skills.py  subagent.py  telegram.py  telegram_admin.py  telegram_map.py  telegram_requests.py  telegram_setup.py  telegram_users.py  update_cmd.py
cli/doctor/: __init__.py  checks.py  findings.py  fixes.py  llm_doctor.py  report.py  runner.py
cli/installer/: __init__.py  bootstrap.py  bootstrap_i18n.py  manifest.py  pypi.py  system.py  update.py
cli/launch/: __init__.py  cli_status.py  relay.py  setup_wizard.py  terminal_keys.py
cli/services/: __init__.py  cron_worker.py  docs_site.py  docs_worker.py  gateway_client.py  gateway_companions.py  gateway_daemon.py  gateway_state.py  gateway_worker.py  supervisor.py  tmux_launcher.py
cli/shared/: __init__.py  agent_host.py  agent_stop.py  cron_auto_dispatch.py  rich_text.py  slash_input.py
cli/tui/: __init__.py  app.py  web_entry.py  web_security.py  web_serve.py  web_server.py
cli/utils/: banner.py  ports.py  profile.py  rich_console.py
core/: agent.py  agent_events.py  agent_execution.py  asyncio_sync.py  config_utils.py  env_loader.py  global_config.py  loop.py  loop_streaming.py  meta_agent.py  paths.py  persistence.py  platform_compat.py  profile_admin_seed.py  profile_keys.py  prompt_builder.py  session_models.py  terminal_whitelist_config.py  url_utils.py  workspace.py
core/billing/: __init__.py  tariffs.py
core/context/: __init__.py  compressor.py  manager.py  token_counter.py
core/cron/: __init__.py  active_runs.py  auto_create.py  discovery.py  expressions.py  models.py  nl_intent.py  notifier.py  runner.py  schedule_parse.py  scheduler.py  session_sync.py  store.py
core/crypto/: __init__.py  bootstrap.py  delivery_files.py  policy.py  (+7 more)
docs/: CHANGELOG.md  DEFAULT_MODEL_README.md  INDEX.md  NAVIGATION.md  QUICK_MODEL_SETUP.md  README.md  START_HERE.md  TROUBLESHOOTING.md
integrations/: __init__.py
scripts/: changelog_release_notes.py  docker-entrypoint.sh  docker_bootstrap.py  hatch_bump_version.py  install.ps1  install.py  install.sh  rename_to_holix.py  setup_pypi_publish.sh  versioning.py
tests/: conftest.py  test_agent_events.py  test_agent_stop.py  test_api_errors.py  test_asyncio_sync.py  test_background_paths.py  test_background_process.py  test_background_process_health.py  test_bootstrap_install.py  test_browser_tools.py  test_bundled_skills.py  test_changelog_release_notes.py  test_checkpointer_async.py  test_chroma_embeddings.py  test_cli_lazy_imports.py  test_clipboard.py  test_collect_subagent_batch.py  test_config_utils.py  test_confirmation.py  test_confirmation_modal_markup.py  test_context.py  test_context_bar.py  test_context_compress_command.py  test_context_session.py  test_copy_bar.py  test_cron.py  test_cron_active_runs.py  test_cron_global_scheduler.py  test_cron_nl_intent.py  test_cron_session.py  test_delivery_files.py  test_di.py  test_diff_render.py  test_direct_dispatch_intent.py  test_docs_chat.py  test_docs_chat_retrieval.py  test_docs_chat_sessions.py  test_docs_command.py  test_doctor.py  test_doctor_link.py  (+204 more)
web-docs/: README.md  build.py  index.html  nav.json  robots.txt  search-chunks.json  search-index.json  search-vectors.manifest.json  search-vectors.npz  seo-meta.json  seo_catalog.py  serve.py  sitemap.xml  yandex_514cfda3468a3bde.html  yandex_a50e5af9baf076d1.html
(+535 files in other folders)
