[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "helix"
version = "0.1.0"
description = "Self-improving AI agent with memory and skills"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn>=0.48.0",
    "openai>=1.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "chromadb>=0.4.0",
    "aiosqlite>=0.19.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
]

[project.scripts]
helix = "cli.main:app"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["cli", "core", "api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
